# warden

./: README.md
backend/: pyproject.toml
backend/src/: app.py  config.py  graph.py  state.py  utils.py
backend/src/nodes/: __init__.py  compliance_eval.py  ingestion.py  output_dispatcher.py  reflection.py  report_generation.py  risk_classification.py  rule_retrieval.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/components/dashboard/: ComplianceScore.tsx  MetricCard.tsx  RiskIndicator.tsx
frontend/src/components/layout/: AuditPopup.tsx  DashboardLayout.tsx  Header.tsx  Sidebar.tsx
frontend/src/components/ui/: Badge.tsx  Dialog.tsx  Select.tsx  Toast.tsx  Toaster.tsx
frontend/src/components/violations/: ViolationRow.tsx  ViolationsTable.tsx
frontend/src/data/: acceptedExtensions.ts  mockData.ts
frontend/src/hooks/: use-toast.ts
frontend/src/pages/: Audit.tsx  Index.tsx  Landing.tsx  Reports.tsx  Settings.tsx  Violations.tsx
frontend/src/types/: compliance.ts
